main/imake/imake-1.0.10-r1.log
pigz: not found
>>> imake: Building main/imake 1.0.10-r1 (using abuild 3.14.1-r4) started Sun, 18 May 2025 09:40:54 +0000
>>> imake: Validating /home/packager/aports/main/imake/APKBUILD...
>>> imake: Analyzing dependencies...
>>> imake: Installing for build: build-base util-macros xorgproto
(1/3) Installing util-macros (1.20.1-r0)
(2/3) Installing xorgproto (2024.1-r0)
(3/3) Installing .makedepends-imake (20250518.094055)
OK: 262 MiB in 84 packages
>>> imake: Cleaning up srcdir
>>> imake: Cleaning up pkgdir
>>> imake: Cleaning up tmpdir
>>> imake: Fetching https://ftp.x.org/pub/individual/util/imake-1.0.10.tar.xz
Connecting to ftp.x.org (131.252.210.176:443)
Connecting to ftp.x.org (131.252.210.176:443)
saving to '/var/cache/distfiles/imake-1.0.10.tar.xz.part'
imake-1.0.10.tar.xz.  66% |*********************           |  101k  0:00:00 ETA
imake-1.0.10.tar.xz. 100% |********************************|  151k  0:00:00 ETA
'/var/cache/distfiles/imake-1.0.10.tar.xz.part' saved
>>> imake: Fetching https://ftp.x.org/pub/individual/util/imake-1.0.10.tar.xz
>>> imake: Checking sha512sums...
imake-1.0.10.tar.xz: OK
>>> imake: Unpacking /var/cache/distfiles/imake-1.0.10.tar.xz...
checking for a BSD-compatible install... /usr/bin/install -c
checking whether build environment is sane... yes
checking for a race-free mkdir -p... /bin/mkdir -p
checking for gawk... no
checking for mawk... no
checking for nawk... no
checking for awk... awk
checking whether make sets $(MAKE)... yes
checking whether make supports nested variables... yes
checking whether make supports the include directive... yes (GNU style)
checking for gcc... gcc
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether the compiler supports GNU C... yes
checking whether gcc accepts -g... yes
checking for gcc option to enable C11 features... none needed
checking whether gcc understands -c and -o together... yes
checking dependency style of gcc... gcc3
checking for gcc options needed to detect all undeclared functions... none needed
checking for stdio.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for strings.h... yes
checking for sys/stat.h... yes
checking for sys/types.h... yes
checking for unistd.h... yes
checking whether __clang__ is declared... no
checking whether __INTEL_COMPILER is declared... no
checking whether __SUNPRO_C is declared... no
checking for pkg-config... /usr/bin/pkg-config
checking pkg-config is at least version 0.9.0... yes
checking build system type... x86_64-pc-linux-musl
checking host system type... x86_64-pc-linux-musl
checking for a sed that does not truncate output... /bin/sed
checking if gcc supports -Werror=unknown-warning-option... no
checking if gcc supports -Werror=unused-command-line-argument... no
checking if gcc supports -Wall... yes
checking if gcc supports -Wpointer-arith... yes
checking if gcc supports -Wmissing-declarations... yes
checking if gcc supports -Wformat=2... yes
checking if gcc supports -Wstrict-prototypes... yes
checking if gcc supports -Wmissing-prototypes... yes
checking if gcc supports -Wnested-externs... yes
checking if gcc supports -Wbad-function-cast... yes
checking if gcc supports -Wold-style-definition... yes
checking if gcc supports -Wdeclaration-after-statement... yes
checking if gcc supports -Wunused... yes
checking if gcc supports -Wuninitialized... yes
checking if gcc supports -Wshadow... yes
checking if gcc supports -Wmissing-noreturn... yes
checking if gcc supports -Wmissing-format-attribute... yes
checking if gcc supports -Wredundant-decls... yes
checking if gcc supports -Wlogical-op... yes
checking if gcc supports -Werror=implicit... yes
checking if gcc supports -Werror=nonnull... yes
checking if gcc supports -Werror=init-self... yes
checking if gcc supports -Werror=main... yes
checking if gcc supports -Werror=missing-braces... yes
checking if gcc supports -Werror=sequence-point... yes
checking if gcc supports -Werror=return-type... yes
checking if gcc supports -Werror=trigraphs... yes
checking if gcc supports -Werror=array-bounds... yes
checking if gcc supports -Werror=write-strings... yes
checking if gcc supports -Werror=address... yes
checking if gcc supports -Werror=int-to-pointer-cast... yes
checking if gcc supports -Werror=pointer-to-int-cast... yes
checking if gcc supports -pedantic... yes
checking if gcc supports -Werror... yes
checking if gcc supports -Werror=attributes... yes
checking whether make supports nested variables... (cached) yes
checking how to run the C preprocessor... gcc -E
checking for cpp... /usr/bin/cpp
checking if /usr/bin/cpp requires -undef... yes
checking if /usr/bin/cpp requires -traditional... yes
checking for mkstemp... yes
checking for gcc option to enable large file support... none needed
checking for perl... no
checking for XPROTO... yes
checking that generated files are newer than configure... done
configure: creating ./config.status
config.status: creating Makefile
config.status: creating config.h
config.status: executing depfiles commands
make  all-am
make[1]: Entering directory '/home/packager/aports/main/imake/src/imake-1.0.10'
  CC       revpath.o
  CC       imake-imake.o
  GEN      xmkmf
  GEN      ccmakedep
  GEN      mkhtmlindex
  GEN      mergelib
  GEN      imake.1
  GEN      revpath.1
  GEN      makeg.1
./mdepend.cpp:128:27: error: invalid preprocessing directive #Flag
  128 |                         # Flag to tell compiler to output dependencies directly
      |                           ^~~~
./mdepend.cpp:129:27: error: invalid preprocessing directive #For
  129 |                         # For example, with Sun compilers, -xM or -xM1 or
      |                           ^~~
./mdepend.cpp:130:27: error: invalid preprocessing directive #with
  130 |                         # with gcc, -M
      |                           ^~~~
./mdepend.cpp:198:9: warning: missing terminating ' character
  198 |   | awk '{
      |         ^
./mdepend.cpp:236:28: warning: missing terminating ' character
  236 |   | egrep -v '^[^:]*:[  ]*$' >> $DEPENDLINES
      |                            ^
  GEN      xmkmf.1
  GEN      ccmakedep.1
  GEN      mergelib.1
  GEN      cleanlinks.1
  GEN      mkdirhier.1
  GEN      mkhtmlindex.1
imake.c: In function 'get_libc_version':
imake.c:980:8: warning: assignment discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  980 |     cc = "gcc";
      |        ^
  CCLD     revpath
  CCLD     imake
make[1]: Leaving directory '/home/packager/aports/main/imake/src/imake-1.0.10'
>>> imake: Entering fakeroot...
make[1]: Entering directory '/home/packager/aports/main/imake/src/imake-1.0.10'
 /bin/mkdir -p '/home/packager/aports/main/imake/pkg/imake/usr/bin'
 /bin/mkdir -p '/home/packager/aports/main/imake/pkg/imake/usr/share/man/man1'
 /usr/bin/install -c makeg xmkmf ccmakedep mergelib mkdirhier cleanlinks mkhtmlindex '/home/packager/aports/main/imake/pkg/imake/usr/bin'
 /bin/mkdir -p '/home/packager/aports/main/imake/pkg/imake/usr/bin'
 /usr/bin/install -c -m 644 imake.1 revpath.1 makeg.1 xmkmf.1 ccmakedep.1 mergelib.1 mkdirhier.1 cleanlinks.1 mkhtmlindex.1 '/home/packager/aports/main/imake/pkg/imake/usr/share/man/man1'
  /usr/bin/install -c imake revpath '/home/packager/aports/main/imake/pkg/imake/usr/bin'
make[1]: Leaving directory '/home/packager/aports/main/imake/src/imake-1.0.10'
>>> imake-doc*: Running split function doc...
'usr/share/man' -> '/home/packager/aports/main/imake/pkg/imake-doc/usr/share/man'
'usr/share/licenses' -> '/home/packager/aports/main/imake/pkg/imake-doc/usr/share/licenses'
>>> imake-doc*: Preparing subpackage imake-doc...
>>> imake-doc*: Running postcheck for imake-doc
>>> imake*: Running postcheck for imake
>>> imake*: Preparing package imake...
>>> imake*: Stripping binaries
>>> imake-doc*: Scanning shared objects
>>> imake*: Scanning shared objects
>>> imake-doc*: Tracing dependencies...
>>> imake-doc*: Package size: 13.1 KB
>>> imake-doc*: Compressing data...
>>> imake-doc*: Create checksum...
pigz: not found
>>> imake-doc*: Create imake-doc-1.0.10-r1.apk
>>> imake*: Tracing dependencies...
	so:libc.musl-x86_64.so.1
>>> imake*: Package size: 51.4 KB
>>> imake*: Compressing data...
>>> imake*: Create checksum...
pigz: not found
>>> imake*: Create imake-1.0.10-r1.apk
>>> imake: Build complete at Sun, 18 May 2025 09:41:04 +0000 elapsed time 0h 0m 10s
>>> imake: Cleaning up srcdir
>>> imake: Cleaning up pkgdir
>>> imake: Uninstalling dependencies...
(1/3) Purging .makedepends-imake (20250518.094055)
(2/3) Purging util-macros (1.20.1-r0)
(3/3) Purging xorgproto (2024.1-r0)
OK: 261 MiB in 81 packages
>>> imake: Updating the main/x86_64 repository index...
>>> imake: Signing the index...
pigz: not found
